--- a/index.html
+++ b/index.html
@@ -21,5 +21,31 @@
             </nav>
         </div>
       </div>
+      <section class="showcase">
+        <div class="container">
+            <div class="grid">
+              <div class="grid-item-1">
+                <div class="showcase-text">
+                  <h1>Aprende cualquier habilidad digital que elijas, hoy!</h1>
+                  <p class="supporting-text"> Más de 30,000 estudiantes están aprendiendo esto.</p>
+                </div>
+                <div class="showcase-form">
+                  <form action="">
+                    <input type="email" placeholder="Ingresa tu correo electrónico">
+                    <input type="submit" class="btn" value="Empieza a aprender">
+                  </form>
+                  <p class="little-info">Prueba nuestros cursos gratuitos</p>
+                </div>
+              </div>
+
+              <div class="grid-item-2">
+                <div class="image">
+                  <img src="img/transparent.jpg" alt="">
+                </div>
+              </div>
+           </div>
+
+        </div>
+      </section>
 </body>
 </html>
