--- a/index.html
+++ b/index.html
@@ -47,5 +47,58 @@
 
         </div>
       </section>
+      <div class="lower-container container">
+        <section class="stats">
+          <div class="flex">
+            <div class="stat">
+              <i class="fa fa-folder-open fa-2x" aria-hidden="true"></i>
+              <h3 class="title">Over 300 available courses</h3>
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="stat">
+              <i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
+              <h3 class="title">Free certificate offered on all courses</h3>
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="stat">
+              <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true"></i>
+              <h3 class="title">Book 1on1 session for as low as $5</h3>
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section class="testimonials">
+            <div class="container">
+              <div class="testimonial grid-3">
+                <div class="card">
+                  <div class="circle">
+                    <img src="img/Logotipo_UIS.png" alt="">
+                  </div>
+                  <h3>Aston</h3>
+                  <p>
+                    INSCRIPCIÓN • Para que un aspirante pueda inscribirse debe cumplir con la normativa vigente establecida por la Universidad, la cual determina los siguientes requisitos: - Acreditar un puntaje mínimo de 31 puntos en todas las áreas que conforman el examen de estado Saber 11.</p>
+                </div>
+                <div class="card">
+                  <div class="circle">
+                    <img src="img/ceitautos.jpg" alt="">
+                  </div>
+                  <h3>Beth</h3>
+                  <p>Somos una institución técnica privada con sentido de formación humanística, técnica e integral, dedicada a la investigación y formación de técnicos competitivos a nivel local, nacional e internacional en el campo automotriz, de motos y maquinaria diesel. Formamos personal capaz de ejecutar tareas para el mantenimiento de automotores a gasolina, motocicletas o diesel, que participen en los procesos de organización y logística de talleres según políticas empresariales, parámetros de los fabricantes y la normatividad vigente.</p>
+                </div>
+                <div class="card">
+                  <div class="circle">
+                    <img src="img/udi.jpg" alt="">
+                  </div>
+                  <h3>Chris</h3>
+                  <p>La Universidad de Investigación y Desarrollo - UDI -, es una institución universitaria de carácter privado, con alto nivel de desarrollo y forjada en beneficio de la formación del pueblo Santandereano y Colombiano.
+                    Es reconocida en el Departamento de Santander, su sede principal está en la ciudad de Bucaramanga con otras 3 sedes en Barrancabermeja, San Gil y Villavicencio. En los últimos años ha obtenido reconocimientos y ha dado apertura a carreras nuevas en la región. Sus programas más antiguos son los de Ingeniería de Sistemas y Diseño Gráfico.
+                    </p>
+                </div>
+              </div>
+            </div>
+          </section>
 </body>
 </html>
