SE AGG LA VERSION FINAL DE LA PAGINA DE PUEBA

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
             <div class="grid">
               <div class="grid-item-1">
                 <div class="showcase-text">
-                  <h1>Aprende cualquier habilidad digital que elijas, hoy!</h1>
-                  <p class="supporting-text"> Más de 30,000 estudiantes están aprendiendo esto.</p>
+                  <h1>Aprende y conose sobre las universidades que mas te gusten.</h1>
+                  <p class="supporting-text"> Brindamos mas de 10 universidaes en nuestra institucion</p>
                 </div>
                 <div class="showcase-form">
                   <form action="">
                     <input type="email" placeholder="Ingresa tu correo electrónico">
                     <input type="submit" class="btn" value="Empieza a aprender">
                   </form>
-                  <p class="little-info">Prueba nuestros cursos gratuitos</p>
+                  <p class="little-info">Conoce cada una de ellas</p>
                 </div>
               </div>
 
               <div class="grid-item-2">
                 <div class="image">
-                  <img src="img/transparent.jpg" alt="">
+                  <img src="img/logo.png" alt="">
                 </div>
               </div>
            </div>
@@ -52,21 +52,19 @@
           <div class="flex">
             <div class="stat">
               <i class="fa fa-folder-open fa-2x" aria-hidden="true"></i>
-              <h3 class="title">Over 300 available courses</h3>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h3 class="title">1° OBEJTIVO DE LA FERIA</h3>
+              <p class="text">Ofrecer un espacio de encuentro entre instituciones educativas de carácter superior, entidades financieras y las instituciones educativas de la región, del Departamento, del resto del país, con los estudiantes de 11° grado, bachilleres, técnicos, tecnólogos, profesionales, docentes, rectores, padres de familia y todas las personas con deseos de superación en el ámbito académico.
+              </p>
             </div>
             <div class="stat">
               <i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
-              <h3 class="title">Free certificate offered on all courses</h3>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h3 class="title">2° OBJETIVO DE LA FERIA</h3>
+              <p class="text">Permitir la concentración de los estudiantes, en lugares específicos, con el propósito de recibir información actualizada y completa de cada institución participante.</p>
             </div>
             <div class="stat">
               <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true"></i>
-              <h3 class="title">Book 1on1 session for as low as $5</h3>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h3 class="title">3° OBJETIVO DE LA FERIA</h3>
+              <p class="text">Facilitar la creación, fortalecimiento y articulación de redes académicas que le permitan a las instituciones ofrecer una orientación vocacional y profesional para los bachilleres de la región guanentina y comunera.</p>
             </div>
           </div>
         </section>
@@ -104,14 +102,14 @@
           <footer>
             <div class="container grid-3">
               <div class="copyright">
-                <h1>Skilllz</h1>
-                <p>Copyright &copy; 2021</p>
+                <h1>COL.GUANENTA</h1>
+                <p>Feria De Universidades &copy; 2024</p>
               </div>
               <nav class="links">
                 <ul>
-                  <li><a href="" class="outline">Home</a></li>
-                  <li><a href="" class="outline">Tutors</a></li>
-                  <li><a href="" class="outline">Categories</a></li>
+                  <li><a href="" class="outline">Inicio</a></li>
+                  <li><a href="" class="outline">Universidades</a></li>
+                  <li><a href="" class="outline">Historia</a></li>
                 </ul>
               </nav>
               <div class="profiles">
